syncron.scss: Fix disclosure icon in dark mode.

--- a/web/syncron.scss
+++ b/web/syncron.scss
@@ -111,6 +111,7 @@ nav.navbar {
     .env.show h2::after {content: var(--disclosure-opened);}
     .env h2::after {
         padding-left: .3rem;
+        filter: var(--dark-invert);
     }
 
     h2 {
@@ -159,6 +160,7 @@ button {
     --bs-code-color: $dark;
     --disclosure-closed:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-caret-right-fill' viewBox='0 0 16 16'><path d='m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z'/></svg>");
     --disclosure-opened: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-caret-down-fill' viewBox='0 0 16 16'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>");
+    --dark-invert: invert(0);
 }
 
 $dot-color: $dark;
@@ -179,6 +181,7 @@ $dot-color: $dark;
     }
     :root {
         --disclosure-color: rgb(182, 185, 180);
+        --dark-invert: invert(1);
     }
 
     @include table-variant(success-dark, $table-success-dark);
